force-app/main/default/objects/HI_Carrier_Detail__c/fields/Address_Addressed_To__c.field-meta.xml
<CustomField>
    <fullName>Address_Addressed_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Addressed To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>