force-app/main/default/objects/HI_Carrier_Detail__c/fields/Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Address_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>