force-app/main/default/objects/HI_Carrier_Detail__c/fields/Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>Address_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>