force-app/main/default/objects/HI_Carrier_Detail__c/fields/Customer_Support__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Support</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>