force-app/main/default/objects/HI_Carrier_Detail__c/fields/Lidi_Census_Email__c.field-meta.xml
<CustomField>
    <fullName>Lidi_Census_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lidi Census Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>