force-app/main/default/objects/HI_Carrier_Detail__c/fields/Min_Eligible_Employees_Required__c.field-meta.xml
<CustomField>
    <fullName>Min_Eligible_Employees_Required__c</fullName>
    <label>Min Eligible Employees Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>