force-app/main/default/objects/HI_Carrier_Detail__c/fields/Qualifying_Life_Event_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Life_Event_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Qualifying Life Event Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>