force-app/main/default/objects/HI_Carrier_Detail__c/fields/Sell_Description__c.field-meta.xml
<CustomField>
    <fullName>Sell_Description__c</fullName>
    <label>Sell Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>